force-app/Base/main/default/objects/Certification_Element__c/fields/Description__c.field-meta.xml
<CustomField>
	<fullName>Description__c</fullName>
	<description>Description of the certification element.</description>
	<label>Description</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>