force-app/Base/main/default/objects/Certification_Element__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<description>Type of certification element.</description>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Multiple Choice</fullName>
			</value>
			<value>
				<fullName>Lab</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>